# lxScrabble

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  StdAfx.cpp  StdAfx.h  WScrabble.cpp  WScrabble.dsp  WScrabble.dsw  WScrabble.ini  WScrabble.rc  lxScrabble.ini  neWScrabble.cpp  neWScrabble.h  port.h  resource.h  scores.ini  test.txt
src/: bot_commands.cpp  bot_commands.h  bot_commands.hpp  dict_handler.cpp  dict_handler.h  dict_handler.hpp  game.cpp  game.h  game.hpp  irc.cpp  irc.h  irc.hpp  lxScrabble.cpp  lxScrabble.h  lxScrabble.hpp  mimics.cpp  mimics.h  mimics.hpp  neWScrabble.cpp  neWScrabble.h  scoreboard.cpp  scoreboard.hpp  scores_handler.cpp  scores_handler.h  scores_handler.hpp  version.h  version.hpp
